# 520-assignments

./: Makefile  README.md  fraction.c  fraction.h  imaginary.h  solutions.c  solutions.h  unit_tests.c
hw_1/: Makefile  imaginary.c  main.c
hw_2/: main.c  unit_tests.c
hw_3/: Makefile  arbitrary_array.c  arbitrary_array.h  dynamic_array.c  dynamic_array.h  unit_tests.c
hw_4/: imaginary.h  typed_array.h  typed_matrix.h  unit_tests.cc
hw_5/: imaginary.cc  mymatrix.csv  second.csv  typed_matrix.h  unit_tests.cc  unit_tests_example.cc  utilities.cc  utilities.h  words.txt
hw_6/: channel.cc  channel.h  manager.cc  manager.h  random_filter.h  stopwatch.cc  stopwatch.h  unit_tests.cc  unit_tests_example_hw6.cc
hw_7/hw_7/: CMakeLists.txt  channel.cc  event.h  manager.cc  manager.h  state_machine.cc  state_machine.h
hw_7/hw_7/examples/: driving.cc  microwave.cc
hw_7/hw_7/homework/: rover.h  stopwatch.cc  stopwatch.h  unit_test.cc
hw_7/hw_7/test/: event.cc
hw_8/: client.cc  client.h
hw_8/test/: p1_test.cc  p2_test.cc  temperature_server.cc
